# dj-wizard

./: .aiexclude  .gitignore  Cargo.toml  LICENSE.md  README.md  config_example.json  prompt.md  stem_track.html  webpage_test.html
crates/dj-wizard-cli/: Cargo.toml
crates/dj-wizard-cli/src/: dialoguer.rs  errors.rs  main.rs  user.rs
crates/dj-wizard-cli/src/soundeo/: mod.rs  search_bar.rs
crates/dj-wizard-cli/src/spotify/: mod.rs
crates/dj-wizard-core/: Cargo.toml
crates/dj-wizard-core/src/: error.rs  lib.rs  user.rs
dj-wizard-gui/: package.json
src/: cleaner.rs  config.rs  dialoguer.rs  ipfs.rs  log.rs  main.rs  soundeo_log.rs  user.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/artist/: commands.rs  mod.rs
src/auth/: firebase_client.rs  google_auth.rs  mod.rs
src/backup/: commands.rs  mod.rs
src/genre_tracker/: commands.rs  mod.rs  scraper.rs
src/migrate/: commands.rs  mod.rs
src/queue/: commands.rs  mod.rs  track_processor.rs
src/soundeo/: api.rs  full_info.rs  mod.rs  search_bar.rs  track.rs  track_list.rs
src/spotify/: api.rs  commands.rs  mod.rs  playlist.rs  track.rs
src/track/: full_info.rs  mod.rs
src/url_list/: commands.rs  mod.rs
