# dj-wizard/Cargo.toml

[workspace]
resolver = "2"
members = [
    "crates/dj-wizard-core",
    "crates/dj-wizard-cli",
    "src-tauri",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "cookies", "stream"] }
error-stack = "0.4"
log = "0.4"
url = "2.5"
colored = "2.1"
scraper = "0.19"
headless_chrome = "1.0"