[package]
name = "dj-wizard"
version = "0.1.23"
edition = "2021"
description = "CLI for DJs"
license = "MIT OR Apache-2.0"
documentation = "https://www.github.com/matiasbn/dj-wizard"
homepage = "https://www.github.com/matiasbn/dj-wizard"
repository = "https://www.github.com/matiasbn/dj-wizard"
rust-version = "1.78"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
error-stack = { workspace = true } # If using error-stack for CLI layer reporting
colored = { workspace = true } # Keep for CLI output
dj-wizard-core = { path = "../dj-wizard-core" }
clap = { version = "4.3.10", features = ["derive"] }
lazy-regex = "2.5.0"
reqwest = { version = "0.11.18", features = ["stream", "blocking", "multipart"] }
scraper = "0.17.1"
serde_json = "1.0.99"
futures-util = "0.3.14"
url = "2.4.0"
colorize = "0.1.0"
serde = { version = "1.0.153", features = ["derive"] }
indicatif = "0.17.5"
headless_chrome = "1.0.5"
dialoguer = "0.10.4"
native-dialog = "0.6.4"
strum_macros = "0.25.1"
strum = "0.25.0"
Inflector = "0.11.4"
