# crates/dj-wizard-core/Cargo.toml
[package]
name = "dj-wizard-core"
version = "0.1.0" # Start with 0.1.0
edition = "2021"
license = "MIT" # Choose your license (e.g., "MIT OR Apache-2.0")
authors = ["matias.barriosn@gmail.com"] # Your name/email
description = "Core logic for dj-wizard CLI and GUI"
repository = "https://github.com/matiasbn/dj-wizard" # URL to your repo

[dependencies]
# Shared dependencies inherited from workspace root
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
error-stack = { workspace = true }
log = { workspace = true }
url = { workspace = true }
colored = { workspace = true } # May need for some internal formatting logic? Re-evaluate later.
scraper = { workspace = true }
headless_chrome = { workspace = true }

# Add other dependencies as needed when moving code (e.g., thiserror)
thiserror = "1.0" # Good for defining library errors
urlencoding = "2.1.0" # Or check crates.io for the latest version
lazy-regex = "3.1.0" # Or check crates.io for the latest version
